change for new branch

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>My Store</title>
-		<link rel="stylesheet" href="./style.css">
-	</head>
-	<body>
-		<h1>Hello, world!</h1>	
-		<p>My name is Gila</p>
-		<p>Wow</p>
+  <head>
+    <title>My Store</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <h1>Hello, world!</h1>
+    <p>My name is Ziv!!!</p>
+    <p>Wow</p>
 
-		<button>Click me!</button>
+    <button>Click me!</button>
 
-		<div>Oh oh</div>
+    <div>Oh oh</div>
 
-		<script src="./script.js"></script>
-	</body>
+    <script src="./script.js"></script>
+  </body>
 </html>
